--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -12,82 +11,81 @@ body {
 
 
 ul {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); //posiciona no meio da tela
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); //posiciona no meio da tela
 
-    display: flex;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 ul li {
   list-style: none;
   margin: 0 5px;
-}
 
-ul li a .fa {
-  font-size: 40px;
-  margin-top: 15px;
-  color: #262626;
-  line-height: 80px;
-  transition: 0.5s;
-  padding-right: 14px;
-}
+  a {
+    text-decoration: none;
+    display: absolute;
+    display: block;
+    width: 210px;
+    height: 80px;
+    background: #FFF;
+    text-align: left;
+    padding-left: 20px;
+    transform: rotate(-30deg) skew(25deg) translate(0, 0);
+    transition: 0.5s;
+    box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
 
-ul li a span {
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: 30px;
-  color: #262626;
-  letter-spacing: 4px;
-  transform: 0.5s;
-}
+    .fa {
+      font-size: 40px;
+      margin-top: 15px;
+      color: #262626;
+      line-height: 80px;
+      transition: 0.5s;
+      padding-right: 14px;
+    }
 
-ul li a {
-  text-decoration: none;
-  display: absolute;
-  display: block;
-  width: 210px;
-  height: 80px;
-  background: #FFF;
-  text-align: left;
-  padding-left: 20px;
-  transform: rotate(-30deg) skew(25deg) translate(0, 0);
-  transition: 0.5s;
-  box-shadow: -20px 20px 10px rgba(0, 0, 0, 0.5);
-}
+    span {
+      padding: 0;
+      margin: 0;
+      position: absolute;
+      top: 30px;
+      color: #262626;
+      letter-spacing: 4px;
+      transform: 0.5s;
+    }
 
-ul li a::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: -20px;
-  height: 100%;
-  width: 20px;
-  background: #b1b1b1;
-  transform: 0.5s;
-  transform: rotate(0deg) skewY(-45deg);
-}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: -20px;
+      height: 100%;
+      width: 20px;
+      background: #b1b1b1;
+      transform: 0.5s;
+      transform: rotate(0deg) skewY(-45deg);
+    }
 
-ul li a::after {
-  content: "";
-  position: absolute;
-  bottom: -20px;
-  left: -10px;
-  height: 20px;
-  width: 100%;
-  background: #b1b1b1;
-  transform: 0.5s;
-  transform: rotate(0deg) skewX(-45deg);
-}
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -20px;
+      left: -10px;
+      height: 20px;
+      width: 100%;
+      background: #b1b1b1;
+      transform: 0.5s;
+      transform: rotate(0deg) skewX(-45deg);
+    }
 
-ul li a:hover {
-  transform: rotate(-30deg) skew(25deg) translate(20px, -15px);
-  box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
-
+    &:hover {
+      transform: rotate(-30deg) skew(25deg) translate(20px, -15px);
+      box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
+    }
+  }
 }
 
 ul li:hover .fa {
